fix(calcite-list-item): adds bit of spacing between label and description

--- a/src/components/calcite-list-item/calcite-list-item.scss
+++ b/src/components/calcite-list-item/calcite-list-item.scss
@@ -60,7 +60,7 @@
 }
 
 .description {
-  @apply text-color-3;
+  @apply text-color-3 mt-0.5;
 }
 
 .content-start,
